--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -27,5 +27,26 @@
         </div>
     </div>
 
+    <table th:fragment="jobs-table" class="job-listing" th:each="job: ${jobs}">
+        <tr>
+            <td th:text="${'ID: ' + job.id}"></td>
+        </tr>
+        <tr>
+            <td th:text="${'Name: ' + job.name}"></td>
+        </tr>
+        <tr>
+            <td th:text="${'Employer: ' + job.employer}"></td>
+        </tr>
+        <tr>
+            <td th:text="${'Location: ' + job.location}"></td>
+        </tr>
+        <tr>
+            <td th:text="${'Position Type: ' + job.positionType}"></td>
+        </tr>
+        <tr>
+            <td th:text="${'Skill: ' + job.coreCompetency}"></td>
+        </tr>
+    </table>
+
 </body>
 </html>
