Completed super bonus mission

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,10 +19,11 @@
                 <a th:href="@{/}" class="navbar-brand">TechJobs</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a th:href="@{/search}">Search</a></li>
-                    <li><a th:href="@{/list}">List</a></li>
-                </ul>
+                    <ul class="nav navbar-nav">
+                        <li th:each="action: ${actions}">
+                            <a th:href="@{'/' + ${action.key}}" th:text="${action.value}"></a>
+                        </li>
+                    </ul>
             </div>
         </div>
     </div>
@@ -39,25 +40,25 @@
         <tr>
             <td class="job-category">Employer</td>
             <td>
-                <a th:href="@{jobs(column='employer',value=${job.employer})}" th:text="${job.employer}"></a>
+                <a th:href="@{'/list/' + jobs(column='employer',value=${job.employer})}" th:text="${job.employer}"></a>
             </td>
         </tr>
         <tr>
             <td class="job-category">Location</td>
             <td>
-                <a th:href="@{jobs(column='location',value=${job.location})}" th:text="${job.location}"></a>
+                <a th:href="@{'/list/' + jobs(column='location',value=${job.location})}" th:text="${job.location}"></a>
             </td>
         </tr>
         <tr>
             <td class="job-category">Position Type</td>
             <td>
-                <a th:href="@{jobs(column='positionType',value=${job.positionType})}" th:text="${job.positionType}"></a>
+                <a th:href="@{'/list/' + jobs(column='positionType',value=${job.positionType})}" th:text="${job.positionType}"></a>
             </td>
         </tr>
         <tr>
             <td class="job-category">Skill</td>
             <td>
-                <a th:href="@{jobs(column='coreCompetency',value=${job.coreCompetency})}" th:text="${job.coreCompetency}"></a>
+                <a th:href="@{'/list/' +jobs(column='coreCompetency',value=${job.coreCompetency})}" th:text="${job.coreCompetency}"></a>
             </td>
         </tr>
     </table>
